<?xml version="1.0"?>
<package>
  <name>moveit_totg_planning_request_adapter</name>
  <version>0.0.1</version>
  <description>Wrapper for Time-Optimal Trajectory Generation</description>

  <maintainer email="ruben.burger@gmail.com">Ruben Burger</maintainer>

  <license>BSD</license>
  <license>BSD-style (tobiaskunz/trajectories)</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>eigen</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <moveit_core plugin="${prefix}/planning_request_adapters_plugin_description.xml"/> 
  </export>
</package>
